# tunnel-max

./: .gitignore  BUILD_GUIDE.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  db.sqlite3  manage.py  pubspec.yaml  test_config.json
android/: build.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  exports.map  sing_box_jni.c  sing_box_jni.h  sing_box_logging.c  sing_box_logging.h
android/keystore/: generate_keystore.bat  generate_keystore.sh
assets/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/interfaces/: configuration_interface.dart  interfaces.dart  platform_channels.dart  singbox_manager_interface.dart  vpn_control_interface.dart
lib/models/: app_error.dart  app_error.g.dart  connection_history.dart  connection_history.g.dart  network_stats.dart  singbox_error.dart  (+10 more)
linux/: CMakeLists.txt
scripts/: build_android.bat  build_android.ps1  build_singbox_from_source.ps1  build_windows.bat  build_windows.ps1  create_placeholder_assets.bat  create_placeholder_singbox.ps1  download_real_singbox.ps1  generate_placeholder_icons.py  get_singbox_latest.ps1  setup_singbox_binaries.bat  setup_singbox_binaries.ps1  verify_native_integration.ps1
test/: android_singbox_manager_test.dart  windows_singbox_manager_test.dart
tunnel_backend/: asgi.py  settings.py  urls.py  wsgi.py
vpn/: admin.py  models.py  urls.py  views.py
web/: index.html  manifest.json
windows/: CMakeLists.txt  build_installer.bat  build_installer.ps1  validate_native_config.bat
(+126 files in other folders)
